welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: not found: value A
if (A) { 
    ^BDRBuggle:5: error: not found: value B
} else if (B) {
           ^BDRBuggle:7: error: not found: value C
} else if (C) {
           ^BDRBuggle:9: error: not found: value R
} else if (R) {
           ^BDRBuggle:12: error: not found: value L
} else if (L) {
           ^BDRBuggle:15: error: not found: value I
} else if (I) {
           ^BDRBuggle:19: error: not found: value Z
} else if (Z) {
           ^BDRBuggle:21: error: not found: value Y
} else if (Y) {
           ^BDRBuggle:23: error: not found: value X
} else if (X) {
           ^